--- a/adressbook-web-tests/adressbook-web-tests/packages.config
+++ b/adressbook-web-tests/adressbook-web-tests/packages.config
@@ -1,7 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BouncyCastle" version="1.8.3.1" targetFramework="net472" />
+  <package id="Google.Protobuf" version="3.6.1" targetFramework="net472" />
+  <package id="linq2db" version="3.0.0-preview.1" targetFramework="net472" />
+  <package id="linq2db.MySql" version="3.0.0-preview.1" targetFramework="net472" />
   <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net472" />
+  <package id="MySql.Data" version="8.0.18" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="NUnit" version="3.12.0" targetFramework="net472" />
   <package id="NUnit.Console" version="3.10.0" targetFramework="net472" />
@@ -15,4 +20,5 @@
   <package id="NUnit3TestAdapter" version="3.15.1" targetFramework="net472" />
   <package id="Selenium.Support" version="3.141.0" targetFramework="net472" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net472" />
+  <package id="SSH.NET" version="2016.1.0" targetFramework="net472" />
 </packages>
