--- a/adressbook-web-tests/adressbook-web-tests/adressbook-web-tests.csproj
+++ b/adressbook-web-tests/adressbook-web-tests/adressbook-web-tests.csproj
@@ -107,6 +107,7 @@
     <Compile Include="appmanager\HelperBase.cs" />
     <Compile Include="appmanager\LoginHelper.cs" />
     <Compile Include="appmanager\NavigationHelper.cs" />
+    <Compile Include="tests\ContactTestBase.cs" />
     <Compile Include="tests\GroupTestBase.cs" />
     <Compile Include="tests\LoginTests.cs" />
     <Compile Include="tests\TestBase.cs" />
