--- a/adressbook-web-tests/adressbook-web-tests/adressbook-web-tests.csproj
+++ b/adressbook-web-tests/adressbook-web-tests/adressbook-web-tests.csproj
@@ -95,8 +95,11 @@
     <Compile Include="model\AddressbookDB.cs" />
     <Compile Include="model\ContactData.cs" />
     <Compile Include="appmanager\ContactHelper.cs" />
+    <Compile Include="model\GroupContactRelation.cs" />
     <Compile Include="model\GroupData.cs" />
     <Compile Include="appmanager\GroupHelper.cs" />
+    <Compile Include="tests\RemoveContactFromGroupTests.cs" />
+    <Compile Include="tests\AddingContactToGroupTests.cs" />
     <Compile Include="tests\AuthTestBase.cs" />
     <Compile Include="tests\ContactDetailInformationTest.cs" />
     <Compile Include="tests\ContactInformationTest.cs" />
