--- a/mantis-tests/mantis-tests/packages.config
+++ b/mantis-tests/mantis-tests/packages.config
@@ -3,6 +3,7 @@
   <package id="BouncyCastle" version="1.7.0" targetFramework="net461" />
   <package id="linq2db" version="2.9.4" targetFramework="net461" />
   <package id="linq2db.MySql" version="2.9.4" targetFramework="net461" />
+  <package id="Moq" version="4.2.1510.2205" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net461" />
   <package id="MySql.Data" version="6.10.7" targetFramework="net461" />
@@ -10,5 +11,7 @@
   <package id="OpaqueMail" version="2.4.3" targetFramework="net461" />
   <package id="Selenium.Support" version="3.141.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
+  <package id="SimpleBrowser" version="0.5.61.0" targetFramework="net461" />
+  <package id="SimpleBrowser.WebDriver" version="0.5.43" targetFramework="net461" />
   <package id="System.Net.FtpClient" version="1.0.5824.34026" targetFramework="net461" />
 </packages>
